MAT-167
Correction after QA feedback on Matrix CLI.

Now the MatsyaClientExecutor is called correctly (Fixed arguments)

Correction of the HTTP source / criterion result content default value
(BODY).

Correction of the Json2Csv/Xml2Csv compute default separator ';'

Correction of the OSCommandSource default separators ' \t'

Fixed energy computation (From PowerConsumption)

Fixed excluded connectors